fix(styles): chat content bottom padding and horizontal overflow

--- a/src/app/room/chat/chat.component.scss
+++ b/src/app/room/chat/chat.component.scss
@@ -88,6 +88,8 @@
 	overflow-y: scroll;
 	transition: all 0.5s;
 	font-size: 16px;
+	padding-bottom: 5px;
+	overflow-x: hidden;
 }
 .top-reached {
 	font-size: 10px;
